--- a/ros_packages/motors/package.xml
+++ b/ros_packages/motors/package.xml
@@ -7,6 +7,8 @@
   <maintainer email="team@pib.rocks">pib</maintainer>
   <license>Agpl3.0</license>
   <exec_depend>rclpy</exec_depend>
+  <exec_depend>serial</exec_depend>
+  <exec_depend>pyserial</exec_depend>
   <exec_depend>tinkerforge</exec_depend>
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
